# numbers-rs

./: Cargo.toml  Dioxus.toml  README.md  index.html
.github/: deploy.sh
.github/workflows/: deploy.yml
assets/: main-dxh668fbf96a1227b91.css  main.css  numbers-dxh12863a011124b9.js  numbers_bg-dxhe6f67aa3296430ad.wasm  style-dxh97b26b829fe7020.css
src/: main.rs
src/components/: icon.rs  mod.rs  title.rs
src/components/switch/: style.css
src/pages/main/: content.rs  form.rs  infos.rs  mod.rs  questions.rs  result.rs
src/utils/: random.rs
