[package]
name = "numbers"
version = "0.1.0"
authors = ["Bruno-Camargo-V3ktor <bruno.ferreira.v3ktor@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.2", features = [] }
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
